# Bet

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Makefile  PROVIDERS.md  README.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: .env.example  ci.yml  (+10 more)
.streamlit/: config.toml
api/: app.py
consensus/: config.yml
data/: fixtures_latest.json  scoreboard.json
docs/: FEATURE_FLAGS.md  FOOTBALL_DATA_SETUP.md  PIPELINE_E2E.md  PR_PLAN.md  UI.md  WORKFLOW_SETUP.md
monitoring/: alerts.yml  primetheus.yml
scripts/: build_value_alerts.py  cleanup_data.py  config.py  consensus_merge.py  dispatch_alerts.py  dump_latest_fixtures.py  enrich_predictions.py  fetch_fixtures.py  fetch_fixtures_apifootbal.py  fetch_fixtures_football_data.py  fetch_odds.py  fetch_odds_oddsapi.py  fetch_results_football_data.py  fixtures_snapshot.py  generate_value_picks.py  parse_telegram.py  predict_elo_fdo.py  retention_cleanup.py  roi_compute.py  run_cycle.py  run_predictions.py  run_prometheus_exporter.py  run_single_settlement_demo.py  update_roi.py  value_alerts.py
src/: __init__.py
tests/: conftest.py  test_alerts.py  test_alerts_write.py  test_config.py  test_diff_classification.py  test_diff_compare_keys.py  test_fixtures_diff.py  test_history_persistence.py  test_logging.py  test_metrics_events.py  test_odds_pipeline_smoke.py  test_provider_fixtures.py  test_scoreboard.py
ui/: app.py
(+122 files in other folders)
